--- a/Pine'sTool/App.config
+++ b/Pine'sTool/App.config
@@ -2,18 +2,18 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-            <section name="Pine_sTool.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
+            <section name="Pine_sTool.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
+    <startup>
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
     <system.serviceModel>
         <behaviors>
             <serviceBehaviors>
                 <behavior name="">
-                    <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true"/>
-                    <serviceDebug includeExceptionDetailInFaults="false"/>
+                    <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
+                    <serviceDebug includeExceptionDetailInFaults="false" />
                 </behavior>
             </serviceBehaviors>
         </behaviors>
@@ -21,13 +21,13 @@
             <service name="Pine_sTool.DetailedFunctionalities.MouseClickProgram.Service1">
                 <endpoint address="" binding="basicHttpBinding" contract="Pine_sTool.DetailedFunctionalities.MouseClickProgram.IService1">
                     <identity>
-                        <dns value="localhost"/>
+                        <dns value="localhost" />
                     </identity>
                 </endpoint>
-                <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
+                <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
                 <host>
                     <baseAddresses>
-                        <add baseAddress="http://localhost:8733/Design_Time_Addresses/Pine_sTool.DetailedFunctionalities.MouseClickProgram/Service1/"/>
+                        <add baseAddress="http://localhost:8733/Design_Time_Addresses/Pine_sTool.DetailedFunctionalities.MouseClickProgram/Service1/" />
                     </baseAddresses>
                 </host>
             </service>
@@ -82,6 +82,12 @@
             </setting>
             <setting name="MES_ThreadNum" serializeAs="String">
                 <value>1</value>
+            </setting>
+            <setting name="PLM_User" serializeAs="String">
+                <value>219523</value>
+            </setting>
+            <setting name="PLM_Password" serializeAs="String">
+                <value>Lh187114</value>
             </setting>
         </Pine_sTool.Properties.Settings>
     </userSettings>
