--- a/Pine'sTool/Pine_sTool.csproj
+++ b/Pine'sTool/Pine_sTool.csproj
@@ -59,6 +59,7 @@
   <ItemGroup>
     <Reference Include="Accessibility" />
     <Reference Include="DevExpress.Data.v18.1, Version=18.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.Images.v18.1, Version=18.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.Printing.v18.1.Core, Version=18.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.RichEdit.v18.1.Core, Version=18.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.Sparkline.v18.1.Core, Version=18.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
@@ -127,6 +128,18 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DetailedFunctionalities\AutomatonTool\AutomatonLaboratory.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DetailedFunctionalities\AutomatonTool\AutomatonLaboratory.Designer.cs">
+      <DependentUpon>AutomatonLaboratory.cs</DependentUpon>
+    </Compile>
+    <Compile Include="DetailedFunctionalities\Cheat\Cheat.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DetailedFunctionalities\Cheat\Cheat.Designer.cs">
+      <DependentUpon>Cheat.cs</DependentUpon>
+    </Compile>
     <Compile Include="DetailedFunctionalities\HandleDuplicateRows.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -186,6 +199,7 @@
     <Compile Include="DetailedFunctionalities\ProcessControl.Designer.cs">
       <DependentUpon>ProcessControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="DetailedFunctionalities\SafeConvert.cs" />
     <Compile Include="DetailedFunctionalities\UserHeper.cs" />
     <Compile Include="DetailedFunctionalities\Windchill登陆器\WindchilLogin.cs">
       <SubType>Form</SubType>
@@ -223,6 +237,7 @@
     <Compile Include="SQL\BLL\PT_MES_SCZJH_MergerTable.cs" />
     <Compile Include="SQL\BLL\PT_MES_SCZJH_nodeList.cs" />
     <Compile Include="SQL\BLL\View_PT_MES_SCZJH_Merger.cs" />
+    <Compile Include="SQL\BLL\出勤记录.cs" />
     <Compile Include="SQL\DAL\PT_IntranetLeaveFactoryDataTable.cs" />
     <Compile Include="SQL\DAL\PT_IntranetLeaveFactoryPart.cs" />
     <Compile Include="SQL\DAL\PT_MES_SCZJH_ALL_TypeOne.cs" />
@@ -230,6 +245,7 @@
     <Compile Include="SQL\DAL\PT_MES_SCZJH_MergerTable.cs" />
     <Compile Include="SQL\DAL\PT_MES_SCZJH_nodeList.cs" />
     <Compile Include="SQL\DAL\View_PT_MES_SCZJH_Merger.cs" />
+    <Compile Include="SQL\DAL\出勤记录.cs" />
     <Compile Include="SQL\DESEncrypt.cs" />
     <Compile Include="SQL\EXT\PT_IntranetLeaveFactoryDataTable.cs" />
     <Compile Include="SQL\EXT\PT_IntranetLeaveFactoryPart.cs" />
@@ -238,6 +254,7 @@
     <Compile Include="SQL\EXT\PT_MES_SCZJH_MergerTable.cs" />
     <Compile Include="SQL\EXT\PT_MES_SCZJH_nodeList.cs" />
     <Compile Include="SQL\EXT\View_PT_MES_SCZJH_Merger.cs" />
+    <Compile Include="SQL\EXT\出勤记录.cs" />
     <Compile Include="SQL\Model\PT_IntranetLeaveFactoryDataTable.cs" />
     <Compile Include="SQL\Model\PT_IntranetLeaveFactoryPart.cs" />
     <Compile Include="SQL\Model\PT_MES_SCZJH_ALL_TypeOne.cs" />
@@ -245,7 +262,14 @@
     <Compile Include="SQL\Model\PT_MES_SCZJH_MergerTable.cs" />
     <Compile Include="SQL\Model\PT_MES_SCZJH_nodeList.cs" />
     <Compile Include="SQL\Model\View_PT_MES_SCZJH_Merger.cs" />
+    <Compile Include="SQL\Model\出勤记录.cs" />
     <Compile Include="SQL\SqlConn.cs" />
+    <EmbeddedResource Include="DetailedFunctionalities\AutomatonTool\AutomatonLaboratory.resx">
+      <DependentUpon>AutomatonLaboratory.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DetailedFunctionalities\Cheat\Cheat.resx">
+      <DependentUpon>Cheat.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="DetailedFunctionalities\HandleDuplicateRows.byn-ER.resx">
       <DependentUpon>HandleDuplicateRows.cs</DependentUpon>
     </EmbeddedResource>
